<resources>
    <string name="app_name">SVCE Interrupt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyALabXoOdRjZ6BDfqz308S8krCXPNNb_oc
    </string>
    <string name="bus_schedule"><a href="http://www.google.com">Google</a></string>
    <string name="aboutinterrupt">Webster\’s Dictionary defines the word ‘Interrupt’ as ”to break off or cause to cease, as in the middle of something”.\nComputer scientists define ‘Interrupt’ as ”A hardware signal that breaks the flow of program execution and transfers control to a predetermined storage location so that another procedure can be followed or a new operation carried out”, but at SVCE, we define Interrupt simply as THE place to be for anyone with a passion for CS.\n\nInterrupt has had students marking their calendars for years now and this year it\’s back and bigger than ever!\nAre you the Don of Logic? Can you make databases dance to your tunes?\nOr is being a Code Ninja more your style? Join us at SVCE on October 1st and find out!\n\nKeep up with all the Interrupt news!\nWebsite: interrupt16.in\n</string>
    <string name="what_is">What is Interrupt, <i>really</i>?</string>
    <string name="webster_title">interrupt</string>
    <string name="webster_def_1"><sup>1</sup> to stop or hinder by breaking in</string>
    <string name="webster_def_2"><sup>2</sup> to break the uniformity or continuity of</string>
    <string name="cs_def"><sup>1</sup> signal to the processor emitted by hardware or software indicating an event that needs immediate attention</string>
    <string name="svce_def"><sup>1</sup> <b><i>the</i></b> place to be for anyone with a passion in Computer Science</string>
    <string name="interrupt_desc"><b>Interrupt</b> has had students marking their calendars for years now and this year it’s back and bigger than ever! <b>Burgeoning</b> by leaps and bounds with more innovative events and our <b>Magnum Opus</b> attraction - the <b><i>Drone Event</i></b>. \n\n<b>Interrupt</b> is for and by the <i>Tech Enthusiasts, Geeks and Quizzers</i>!</string>
    <string name="contact_mail">Mail</string>
    <string name="contact_mailid">interrupt2k17@gmail.com</string>
    <string name="contact_insta">Follow And DM</string>
    <string name="contact_instaid">interrupt_svce</string>
    <string name="contact_fb">Leave a Query</string>
    <string name="contact_fbid"><a href="https://www.facebook.com/svceinterrupt/">https://www.facebook.com/svceinterrupt/</a></string>
    <string name="call">Need More Help?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_transport">TransportActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_dummy">dummy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_map">Map</string>
    <string name="day0">Event yet to start</string>
    <string name="day1">Day 1 of 5</string>
    <string name="day2">Day 2 of 5</string>
    <string name="day3">Day 3 of 5</string>
    <string name="day4">Day 4 of 5</string>
    <string name="day5">Day 5 of 5</string>
    <string name="day6">Event over</string>
    <string name="subtitle">September 25<sup>th</sup>. Save The Date.</string>
    <string name="daynulls">0</string>
    <string name="day1s">1</string>
    <string name="day2s">2</string>
    <string name="day3s">3</string>
    <string name="day4s">4</string>
    <string name="day5s">5</string>
    <string name="instruct">1. All the participants must have their college ID card with them at all times.\n\n2. The participants must follow the dress code as per Anna University rules. Any violation may result in denial of registration.\n\n3. Private vehicles must be parked at the parking space provided.\n\n4. While inside the campus, please adhere to the rules and regulations provided by the management.\n\n5. Refrain from arguing or fighting with the organisers. We are, after all, here to help you have a pleasant experience.\n\n6. Participants must register before attending the symposium.\n\n7. Lunch will not be provided by the organisers.</string>
    <string name="Picturesque">In a world where creatives often only have a couple of minutes to view your site, the photographs on the site can play a major role. Many people will quickly abandon a website to jump to the next, so you have to make sure your entire site is not only engaging, but successfully portrays your personality.\n\nSo here\'s an extraordinary opportunity for y\'all to grab in this year\'s interrupt. An innovative, inventive and prolific photograph of our symposium on  Facebook; can help y\'all to showcase your talent to the outer world.\n\nHurry up, what are you waiting for?</string>
    <string name="Picturesque_rules">Theme:\n1. Colours and contrast\n2. Perspective\n3. Gadgets\n4. Robotics\n\n1. Only 1 submission per participant.\n2. Mail your photo to the interrupt mail-ID.\n3. Photos will get shared on the Interrupt Svce Facebook Page.\n4. The Top 2 photographs with the most number of likes on the post will be selected and awarded a cash prize.</string>
    <string name="Connect4">Is the Jumble totally your thing? Do you love guessing games? Four clues, one word and a ticking clock. How quickly can your brain put two and two together? Come show us at Connect4!</string>
    <string name="Connect4_rules">1. Participants will have images to connect and guess the word.\n2. Top 3 participants, based on the points will be selected and awarded a cash prize.\n\nThe online game starts on 19th September. 20 questions per day. 5 days.</string>
    <string name="coders_bay">Ahoy! Anchor up at the C-Port, where everyone goes \"Arr!\" as you take out your computers and venture into the Web, ready to code your way to victory.\n\nSwim through the Torrents and fight the Pythons of the sea as you search for that right algorithm to reach for Davy Jones\' Locker!\n\nRegister now, weigh your anchors, and Give No Quarter.</string>
    <string name="coders_bay_rules">1. This event is an online coding event conducted on HackerRank.\n2. The participant is required to have a HackerRank account to participate in this event.\n3. The Top 3 participants will be judged by the number of points they acquire.\n4.Event starts on 19th September.\n\nTop three teams will be given cash prize.\n\nPlease follow the website for regular updates.</string>
    <string name="Quiz_wiz">Are you a fount of computer knowledge? Do you feel that you\'re a \'A walking computer encyclopedia\'? If so, then let your inner quiz enthusiast come out and take part in this quiz event.\n\nThis event comprises of 2 rounds- the prelims and the finals. In each round, you\'ll be asked a number of questions of different types testing your knowledge. If you win, you earn from it.\n\nEven otherwise, you learn from it. It\'s always gonna be a win for you.\n\nRegister now!</string>
    <string name="Quiz_wiz_rules">1. It\'s a General Technology-based Quiz.\n2. Teams of 2.\n3. Participants will have to answer 20 questions for prelims.\n4. 1 point will be awarded per correct answer.\n5. The decisions of the quiz masters are considered to be final decisions and shall permit no changes to it.\n\nTop three teams will be given cash prize.</string>
    <string name="presentation_park">Are you a visionary keen on computer science? Then this event is the perfect platform for you to exhibit your knowledge. You are required to choose and present a paper on any one of the given topics.\n\nFascinate the judges by sharing your in depth knowledge and unique insights on the chosen topic are prove to them that you are worthy of being \'the chosen one\'!\n\nRegister here!</string>
    <string name="presentation_park_rules">1. Abstracts (size : 100 - 150 words) should be sent before 19/09/2017 at  paperinterrupt17@gmail.com:\n2. Teams of 2\n3. PPT : Maximum of 15 slides.\n\nTopics:\n-> Artificial Intelligence\n-> Networks\n-> Image Processing\n-> Data Analytics\n-> Machine Learning\n-> Internet Of Things\n-> Cloud\n\nMaximum time for presentation: 15 mins. ( 10 for presentation + 5 for questioning)\n\nTop two teams will be given cash prize.</string>
    <string name="BLC">\"Imagination takes you everywhere\" - Albert Einstein.\nAre you a person who agrees to disagree with him on this and prove that it is logic that takes you everywhere and beyond?\nTake part in this coding event comprising of 2 rounds - a logical puzzle solving round followed by a Room Escape style round where you\'ll have to find clues to escape and win. It doesn\'t get better than this!\nRegister here!</string>
    <string name="BLC_rules">1. Participants will have to solve logical puzzles.\n2. The decisions of the judges and the organizers are considered to be the final decisions and shall permit no changes to it.\n\nTop two participants will be given cash prize.</string>
    <string name="flip">A SQL query walks into a bar and sees two tables. He walked up to them and says \'Can I join you?\'\n\nIf you got that, you may have what it takes to tackle insane databases with queries that will search the word \"supercalifragilisticexpialidocious\" like a walk in the park.\n\nThis event comprises of 2 rounds, with General MCQs and a querying round where you get to bring your A - Game and add it to a primary key. Register here to flip the tables in your favor!</string>
    <string name="flip_rules">1.Basic knowledge of MySQL queries is expected.\n2.Team must consists of maximum 3 members.\n3. The decisions of the judges and the organizers are considered to be the final decisions and shall permit no changes to it.\n\nTop three teams will be given a cash prize.</string>
    <string name="battlecode">Take up arms (and your keyboards) to fight an all-out war against teams to rise as the Champion of the land of JAVArosa.\n\nAs army generals, command your prompts as you clash in two rounds, filled with coding and sharp C/ C++ snippets, and strategize your structures to form a Victory array!\n\nRegister now, and join the war for the Interrup-Throne!</string>
    <string name="battlecode_rules">1.The Partipants will have to solve 30 mcqs for 15 mins.\n2. 1 point for correct answer.\n3. 0 points for unanswered questions and wrong answers.\n\nTop three participants will be given cash prize.</string>
    <string name="myobv2">Welcome to the mothership of all events. This challenge is not for the weak, but for those who\'ve embraced their light and dark side.\n\nThat\'s right, watch as all your \"other\" skills being tested through rounds varying from playing dumb in charades to coming up with a creative ad for Adzap.\n\nRegister now if you think you\'ve got what it takes to Mind Your Business.\n\nRounds will be announced on-spot.</string>
    <string name="myobv2_rules">1. A written test will be conducted to test the logical and analytical skills. It would also gauge your personality.\n2. Most innovative team wins.\n3. Participants with higher scores will be selected for the next round\n4. The decisions of the judges and the organizers are considered to be the final decisions and shall permit no changes to it.\n\nTop three teams will be given cash prize.</string>
    <string name="code_o_poly">Were you born to code?\n\nThen grab two of your friends and head on down to First Strike!\nPlayers who make it through our ultimate C skills test get into a round of Code Bingo, where CS meets Tumbola.\n\nRegistrations open now!</string>
</resources>