<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lazytomatostudios.svceinterrupt.homeactivities.ContactActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:duration="2000"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="0dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/int_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:layout_below="@id/logo"
                    android:text="Having Any Trouble?"
                    android:textSize="30dp"/>

                <TextView
                    android:id="@+id/int_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:layout_below="@id/int_title"
                    android:text="Fell Free to Interrupt Us"
                    android:textSize="20dp"/>

            </RelativeLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/in_touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get in-touch with us by:"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/shimmer"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"/>


        <android.support.v7.widget.CardView
            android:id="@+id/contact_card"
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/in_touch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="#123F56">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/contact_mail"
                    android:textSize="40dp"
                    android:textColor="#ffffff"
                    android:fontFamily="serif"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/contact_mailid"
                    android:textSize="25dp"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/contact_card1"
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="#123F56">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/contact_insta"
                    android:textSize="30dp"
                    android:textColor="#ffffff"
                    android:fontFamily="serif"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/contact_instaid"
                    android:textSize="25dp"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/contact_card2"
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_card1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="#123F56">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/contact_fb"
                    android:textSize="30dp"
                    android:textColor="#ffffff"
                    android:fontFamily="serif"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/contact_fbid"
                    android:textSize="20dp"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/con_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_card2"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            android:text="@string/call"
            android:textStyle="bold"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/con_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/con_title1"
            android:layout_marginStart="20dp"
            android:text="You Can WhatsApp Us!"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/con_icons2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/con_title2"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/dev1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <ImageView
                android:id="@+id/dev2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/ic_account_circle_black_24dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/con_names2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/con_icons2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="S.Chran"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Arjun Arvind"
                android:layout_weight="1"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/con_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/con_names2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Secretary, ACE"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Joint Secretary, ACE"
                android:layout_weight="1"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/con_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/con_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="95001 32964"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="89392 27284"
                android:layout_weight="1"
                android:textAlignment="center"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
